Add auth, SSR and SEO, fix build config
